edits to latefee management

--- a/backend/email_templates/html_content.html
+++ b/backend/email_templates/html_content.html
@@ -9,12 +9,11 @@
     <div style="width: 100%; height: 100%;">
       <div style="display: flex; align-items: center; padding: 20px; background-color: #c08a5f; color: #fff;">
         <div style="font-size: 24px;">
-          <a href="/" style="color: white; text-decoration: none;">Book Stack</a>
+          <a href="https://main--bookstack-csci-group-13.netlify.app/" style="color: white; text-decoration: none;">Book Stack</a>
         </div>
         <div style="display: flex; flex-direction: row; flex: 1;">
-          <ul style="display: flex; flex-direction: row; align-items: flex-start; list-style-type: none; padding: 0; gap: 2em; flex: 1;">
+          <ul style="display: flex; flex-direction: row; align-items: flex-start; list-style-type: none; padding-left: 2em; gap: 2em; flex: 1;">
             <li><a href="https://main--bookstack-csci-group-13.netlify.app/" style="color: white; text-decoration: none;">Home</a></li>
-            <li><a href="https://main--bookstack-csci-group-13.netlify.app/coming-soon" style="color: white; text-decoration: none;">Favorites</a></li>
             <li><a href="https://main--bookstack-csci-group-13.netlify.app/about" style="color: white; text-decoration: none;">About Us</a></li>
             <li><a href="https://main--bookstack-csci-group-13.netlify.app/contactus" style="color: white; text-decoration: none;">Contact Us</a></li>
             <li><a href="https://main--bookstack-csci-group-13.netlify.app/faq" style="color: white; text-decoration: none;">FAQ</a></li>
